--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <div class="search-element">
                 <h3>Procurar filme:</h3>
-                <input type="text" class="form-control" placeholder="Insira o título do filme" id="movie-search-box" onkeyup="findMovies()">
+                <input type="text" class="form-control" placeholder="Insira o título do filme" id="movie-search-box" onkeyup="findMovies()" onclick="findMovies()">
 
 
                 <div class="search-list" id="search-list">
@@ -48,7 +48,7 @@
             <div class="result-container">
                 <div class="result-grid" id="result-grid">
                     <!--Informações do filme-->
-                    <div class="movie-poster">
+                    <!-- <div class="movie-poster">
                         <img src="/img/teste.jpg" alt="movieposter">
                     </div>
                     <div class="movie-info">
@@ -64,7 +64,7 @@
                         <p class="plot"><b>Plot:</b> Trapped on her family's isolated farm, Pearl's lust for a glamorous life turns deadly as she begins a descent into madness.</p>
                         <p class="language"><b>Language:</b> English</p>
                         <p class="awards"><b><i class="fas fa-award"></i></b> None</p>
-                    </div>
+                    </div> -->
                     
 
                     </div>
